--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.5.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.12"
-  }
+    "name": "ts-server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "/dist/app.js",
+    "scripts": {
+        "start": "node ./dist/app.ts",
+        "dev": "nodemon ./src/app.ts",
+        "build": "tsc -p"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@types/bcryptjs": "^2.4.2",
+        "@types/cors": "^2.8.12",
+        "@types/dotenv": "^8.2.0",
+        "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.4",
+        "@types/node": "^16.4.13",
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "express-graphql": "^0.12.0",
+        "graphql": "^15.5.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.13.5",
+        "reflect-metadata": "^0.1.13",
+        "ts-node": "^10.1.0",
+        "typescript": "^4.3.5"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.12"
+    }
 }
