--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
         "graphql": "^15.5.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.13.5",
+        "mysql2": "^2.3.0",
         "reflect-metadata": "^0.1.13",
         "ts-node": "^10.1.0",
         "typescript": "^4.3.5"
