--- a/serverToPopulateDB/package.json
+++ b/serverToPopulateDB/package.json
@@ -19,6 +19,7 @@
     "@types/request": "^2.48.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "mysql2": "^2.3.0",
