--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
     "apollo-link-context": "^1.0.20",
+    "cypress": "^9.1.1",
     "formik": "^2.2.9",
     "graphql": "^15.5.1",
     "jwt-decode": "^3.1.2",
